--- a/www/js/birthday.html
+++ b/www/js/birthday.html
@@ -3,6 +3,11 @@
   <title>Test JavaScript Form Validation</title>
  <!-- <link rel="stylesheet" href="FormValidation.css"> -->
   <script type="text/javascript" src="../js/birthday.js" ></script>
+  <script src="http://listjs.com/no-cdn/list.js"></script>
+  <script type="text/javascript" ng:autobind src="http://code.angularjs.org/0.10.5/angular-0.10.5.js"></script>
+  <script>
+
+  </script>
 </head>
  
 <body>
@@ -37,5 +42,23 @@
       <td>&nbsp;</td></tr>
     </table>
   </form>
+
+<table ng:controller="SortableTableCtrl">
+    <thead>
+        <tr>
+            <th ng:repeat="(i,th) in head" ng:class="selectedCls(i)" ng:click="changeSorting(i)">{{th}}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng:repeat="row in body.$orderBy(sort.column, sort.descending)">
+            <td>{{row.fn}}</td>
+            <td>{{row.ln}}</td>
+            <td>{{row.m}}</td> 
+            <td>{{row.d}}</td> 
+            <td>{{row.y}}</td> 
+        </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
