--- a/www/index.html
+++ b/www/index.html
@@ -18,12 +18,14 @@
   </head>
   <body ng-app="main">
 
-    <ion-pane>
+    <ion-pane ng-controller="contactsCtrl">
       <ion-header-bar class="bar-stable">
+
         <h1 class="title">GoGift</h1>
+        <button class="button button-clear" ng-click="openFriendModal()">+</button>
       </ion-header-bar>
       <ion-content>
-        <div ng-controller="contacts">
+        <div>
           <div ng-if="contacts.length === 0">You have no friends' birthdays stored! Add your friends using the menu on the top right.</div>
           <div ng-if="contacts.length !== 0"></div>
         </div>
