--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    
     <title></title>
 
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -13,8 +14,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!--jQuery-->
+    <script src="js/jquery-1.11.2.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script type="text/javascript" src="../js/birthday.js" ></script>
+  
   </head>
   <body ng-app="main">
 
@@ -27,7 +33,14 @@
       <ion-content>
         <div>
           <div ng-if="contacts.length === 0">You have no friends' birthdays stored! Add your friends using the menu on the top right.</div>
-          <div ng-if="contacts.length !== 0"></div>
+          <div ng-if="contacts.length > 0">
+                    <tr>
+                        <th ng-repeat="(i,th) in head" ng-class="selectedCls(i)" ng-click="changeSorting(i)">{{th}}</th>
+                    </tr>
+                    <ul ng-repeat="contact in contacts | orderBy:birthdaySort">
+                        <li>{{contact.fname}} {{contact.lname}}'s birthday is on {{contact.month}}/{{contact.day}} which is in {{birthdaySort(contact)}} days</li>
+                    </ul>
+          </div>
         </div>
       </ion-content>
     </ion-pane>
