--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,21 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script type="text/javascript" src="../js/birthday.js" ></script>
-  
-  </head>
+    <style>
+    li
+      {
+      padding-left: 10%
+      line-height: 1.5em
+      }
+    .restdays{
+      background-color: yellow;
+    }
+      </style>
+  </head> 
   <body ng-app="main">
-
+<div class="bar bar-header bar-positive">
+  <h1 class="title">GoGift</h1>
+</div>
     <ion-pane ng-controller="contactsCtrl">
       <ion-header-bar class="bar-stable">
 
@@ -37,8 +48,8 @@
                     <tr>
                         <th ng-repeat="(i,th) in head" ng-class="selectedCls(i)" ng-click="changeSorting(i)">{{th}}</th>
                     </tr>
-                    <ul ng-repeat="contact in contacts | orderBy:birthdaySort">
-                        <li>{{contact.fname}} {{contact.lname}}'s birthday is on {{contact.month}}/{{contact.day}} which is in {{birthdaySort(contact)}} days</li>
+                    <ul class="list" ng-repeat="contact in contacts | orderBy:birthdaySort">
+                        <li class="item">{{contact.fname}} {{contact.lname}}'s birthday is on {{contact.month}}/{{contact.day}} which is in<i class="restdays"> {{birthdaySort(contact)}} </i> days</li>
                     </ul>
           </div>
         </div>
